# demo

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
tests/: test_awesome.py
