[tool.poetry]
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
description = "My Awesome Project is awesome"
license = "MIT"
name = "my-awesome-project"
version = "0.1.0"

[tool.bandit]
exclude = ["./tests"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {version = "^21.9b", allow-prereleases = true}
flake8 = "^4.0.1"
ipython = "^7.18"
pdbpp = "^0.10.3"
pylint = "^2.4"
pytest = {version = "^6.2"}
pytest-cov = "^3.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.4.0"


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov=my_awesome_project
    --cov-report term-missing:skip-covered
    --doctest-modules
    -n 4
"""

minversion = "6.0"
testpaths = [
  "tests",
]
